--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2 class="logo">Merkil Trading Limited</h2>
       <nav>
         <ul>
-          <li><a href="Index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="mission and vision.html">Our Mission</a></li>
           <li><a href="what we supply.html">Services</a></li>
           <li><a href="compliance.html">compliance</a></li>
