--- a/mission and vision.html
+++ b/mission and vision.html
@@ -17,7 +17,7 @@
         </button>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="mission and vision.html">Our Mission</a></li>
                 <li><a href="what we supply.html">Services</a></li>
                 <li><a href="compliance.html">compliance</a></li>
