--- a/compliance.html
+++ b/compliance.html
@@ -19,7 +19,7 @@
     </button>
     <nav>
       <ul>
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="mission and vision.html">Our Mission</a></li>
         <li><a href="what we supply.html">Services</a></li>
         <li><a href="compliance.html">compliance</a></li>
