--- a/About us.html
+++ b/About us.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <div class="about">
-        <img src="./benja/13.5.jpg" alt="about" loading="lazy">
+        <img src="./13.5.jpg" alt="about" loading="lazy">
     </div>
     <script src="script.js"></script>
 </body>
