--- a/compliance.html
+++ b/compliance.html
@@ -32,7 +32,7 @@
         <h3>Compliance</h3>
       </div>
       <div class="card">
-        <img src="./img/doc1.5.png" alt="doc" loading="lazy">
+        <img src="./doc1.5.png" alt="doc" loading="lazy">
 
       </div>
     </section>
@@ -41,7 +41,7 @@
         <h3>Compliance</h3>
       </div>
       <div class="card">
-        <img src="./img/doc2.5.png" alt="doc2" loading="lazy">
+        <img src="./doc2.5.png" alt="doc2" loading="lazy">
 
       </div>
     </section>
@@ -50,7 +50,7 @@
         <h3>Compliance</h3>
       </div>
       <div class="card">
-        <img src="./img/doc4.5.png" alt="doc3" loading="lazy">
+        <img src="./doc4.5.png" alt="doc3" loading="lazy">
 
       </div>
     </section>
@@ -59,7 +59,7 @@
         <h3>Compliance</h3>
       </div>
       <div class="card">
-        <img src="./img/doc6.png" alt="doc4" loading="lazy">
+        <img src="./doc6.png" alt="doc4" loading="lazy">
 
       </div>
     </section>
