--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     </section>
     <section class="quote">
-      <img src="./benja/6.5.jpg" alt="qoute">
+      <img src="./6.5.jpg" alt="qoute">
     </section>
   </div>
   <footer class="footer">
