Update mission and vision.html

--- a/mission and vision.html
+++ b/mission and vision.html
@@ -59,7 +59,7 @@
             </ul>
         </div>
         <div class="cars">
-          <img src="./img/mark15.png" alt="machinery" loading="lazy">
+          <img src="./mark15.png" alt="machinery" loading="lazy">
         </div>
     </section>
     <footer class="footer">
