Update what we supply.html

--- a/what we supply.html
+++ b/what we supply.html
@@ -53,9 +53,9 @@
             </p>
             <br>
             <div class="parts">
-                <img src="./img/mark7.5.png" alt="equipment" loading="lazy">
-                <img src="./img/mark8.5.png" alt="equipment" loading="lazy">
-                <img src="./img/mark9.5.png" alt="equipment" loading="lazy">
+                <img src="./mark7.5.png" alt="equipment" loading="lazy">
+                <img src="./mark8.5.png" alt="equipment" loading="lazy">
+                <img src="./mark9.5.png" alt="equipment" loading="lazy">
             </div>
         </article>
         <div>
@@ -115,7 +115,7 @@
         </article>
         <div class="note">
             <div class="fork">
-                <img src="./img/mark10.5.png" alt="forklift" loading="lazy">
+                <img src="./mark10.5.png" alt="forklift" loading="lazy">
             </div>
             <p><strong>Kindly note that our supplies are not limited to the above.</strong></p>
         </div>
@@ -164,8 +164,8 @@
             </div>
         </article>
         <div class="machinery">
-            <img src="./img/mark13.5.png" alt="" loading="lazy">
-            <img src="./img/mark14.5.png" alt="" loading="lazy">
+            <img src="./mark13.5.png" alt="" loading="lazy">
+            <img src="./mark14.5.png" alt="" loading="lazy">
         </div>
     </section>
     <footer class="footer">
